force-app/main/default/objects/Endorsement__c/Endorsement__c.object-meta.xml
<CustomObject>
    <description>Endorsements</description>
    <label>Endorsement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Endorsements Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Endorsements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>