force-app/main/default/objects/Endorsement__c/fields/Account_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person__c</fullName>
    <formula>Policy__r.Account__r.Contact_Person__r.FirstName + &quot; &quot; +  Policy__r.Account__r.Contact_Person__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contact Person</label>
    <type>Text</type>
</CustomField>