force-app/main/default/objects/Endorsement__c/fields/Account_Contact_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person_Email__c</fullName>
    <formula>Policy__r.Account__r.Contact_Person__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contact Person Email</label>
    <type>Text</type>
</CustomField>