force-app/main/default/objects/Endorsement__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <formula>Policy__r.Account_Executive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Executive</label>
    <type>Text</type>
</CustomField>