force-app/main/default/objects/Endorsement__c/fields/Account_Management_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Management_Rep__c</fullName>
    <formula>Policy__r.Account_Management_Rep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Management Rep</label>
    <type>Text</type>
</CustomField>