force-app/main/default/objects/Endorsement__c/fields/Accounting_Classification__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Classification__c</fullName>
    <formula>Policy__r.Accounting_Classification__c</formula>
    <label>Accounting Classification</label>
    <type>Text</type>
</CustomField>