force-app/main/default/objects/Endorsement__c/fields/Admitted__c.field-meta.xml
<CustomField>
    <fullName>Admitted__c</fullName>
    <label>Admitted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>