force-app/main/default/objects/Endorsement__c/fields/Admitted_new__c.field-meta.xml
<CustomField>
    <fullName>Admitted_new__c</fullName>
    <formula>TEXT(Policy__r.Admitted__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admitted</label>
    <type>Text</type>
</CustomField>