force-app/main/default/objects/Endorsement__c/fields/AMR_Email_HB__c.field-meta.xml
<CustomField>
    <fullName>AMR_Email_HB__c</fullName>
    <formula>Policy__r.AMR_Email_HB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H&amp;B AMR Email</label>
    <type>Text</type>
</CustomField>