force-app/main/default/objects/Endorsement__c/fields/Annualized_Premium_Change_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Premium_Change_Amount__c</fullName>
    <description>this field lets the user know what an endorsement premium would be if it were in effect for 365 days. Gives the user more insight into the &quot;premium adjusted field&quot;</description>
    <label>Annualized Premium Change Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>