force-app/main/default/objects/Endorsement__c/fields/Approved_by_State__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_State__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not use</description>
    <label>Approved by State</label>
    <type>Checkbox</type>
</CustomField>