force-app/main/default/objects/Endorsement__c/fields/AutoCalc_Taxes_Fees__c.field-meta.xml
<CustomField>
    <fullName>AutoCalc_Taxes_Fees__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AutoCalc Taxes &amp; Fees</label>
    <type>Checkbox</type>
</CustomField>