force-app/main/default/objects/Endorsement__c/fields/Billing_Month__c.field-meta.xml
<CustomField>
    <fullName>Billing_Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Month</label>
    <type>Date</type>
</CustomField>