force-app/main/default/objects/Endorsement__c/fields/Bind_Order_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Bind_Order_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bind Order Sent Date</label>
    <type>Date</type>
</CustomField>