force-app/main/default/objects/Endorsement__c/fields/Cancellation_Req_sent_to_Financing_Co__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Req_sent_to_Financing_Co__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Req sent to Financing Co</label>
    <type>Checkbox</type>
</CustomField>