force-app/main/default/objects/Endorsement__c/fields/Cancelled_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Notification_Date__c</fullName>
    <formula>Policy__r.Account__r.Cancelled_Notification_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancelled Notification Date</label>
    <type>Date</type>
</CustomField>