force-app/main/default/objects/Endorsement__c/fields/Carrier_Issuing_Company__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Issuing_Company__c</fullName>
    <formula>Policy__r.Carrier_Issuing_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Issuing Company</label>
    <type>Text</type>
</CustomField>