force-app/main/default/objects/Endorsement__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add Coverage</fullName>
            </value>
            <value>
                <fullName>Add Named Insured</fullName>
            </value>
            <value>
                <fullName>Additional Insured</fullName>
            </value>
            <value>
                <fullName>Add Location</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Cancel/Rewrite</fullName>
            </value>
            <value>
                <fullName>Cancellation (by Insured)</fullName>
            </value>
            <value>
                <fullName>Cancellation (Noncompliance)</fullName>
            </value>
            <value>
                <fullName>Cancellation (Nonpayment)</fullName>
            </value>
            <value>
                <fullName>Cancellation (Tail in Place)</fullName>
            </value>
            <value>
                <fullName>Coverage Extension</fullName>
            </value>
            <value>
                <fullName>Commission Statement</fullName>
            </value>
            <value>
                <fullName>Decrease Limits</fullName>
            </value>
            <value>
                <fullName>Increase Limits</fullName>
            </value>
            <value>
                <fullName>Increase/Decrease in Exposure</fullName>
            </value>
            <value>
                <fullName>Inspection Recommendation</fullName>
            </value>
            <value>
                <fullName>Location Change</fullName>
            </value>
            <value>
                <fullName>Loss Payee</fullName>
            </value>
            <value>
                <fullName>Mailing Address Change</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Policy Change</fullName>
            </value>
            <value>
                <fullName>Name Change</fullName>
            </value>
            <value>
                <fullName>Notice of Cancellation</fullName>
            </value>
            <value>
                <fullName>Off Risk</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rating Basis Change</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Remove Coverage</fullName>
            </value>
            <value>
                <fullName>Remove Location</fullName>
            </value>
            <value>
                <fullName>Tail Coverage</fullName>
            </value>
            <value>
                <fullName>Waiver of Subrogation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>