force-app/main/default/objects/Endorsement__c/fields/Change_Commission__c.field-meta.xml
<CustomField>
    <fullName>Change_Commission__c</fullName>
    <formula>Policy__r.Premium_Change__c *  Change_Commission_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Policy Premium Change *  Change Commission Rate</inlineHelpText>
    <label>Change in MGA Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>