force-app/main/default/objects/Endorsement__c/fields/Change_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Change_Commission_Rate__c</fullName>
    <description>Is Scale keeping a different commission % for this endorsement? If so, add or subtract the % change. If not, leave as 0.</description>
    <inlineHelpText>Is Scale keeping a different commission % for this endorsement? If so, add or subtract the % change. If not, leave as 0.</inlineHelpText>
    <label>Change in MGA Commission Rate?</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>