force-app/main/default/objects/Endorsement__c/fields/Coalition_Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Coalition_Endorsements__c</fullName>
    <formula>HYPERLINK(Policy__r.Coalition_Endorsements__c, Policy__r.Coalition_Endorsements__r.FirstName + &quot; &quot; + Policy__r.Coalition_Endorsements__r.LastName, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coalition Endorsements</label>
    <type>Text</type>
</CustomField>