force-app/main/default/objects/Endorsement__c/fields/Comission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Comission_Rate__c</fullName>
    <formula>Policy__r.Commission_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comission Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>