force-app/main/default/objects/Endorsement__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>IF(Override_Policy_Commission_Rate__c=true, Endt_Commission_Rate__c * Premium_Change_Amount__c, Commission_Rate__c * Premium_Change_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>