force-app/main/default/objects/Endorsement__c/fields/Commission_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Change_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commission Change Date</label>
    <type>Date</type>
</CustomField>