force-app/main/default/objects/Endorsement__c/fields/Commission_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Policy_Type__c</fullName>
    <formula>IF(
ISPICKVAL(Policy__r.Commission_Policy_Type__c, &quot;New Business&quot;),
&quot;New Business&quot;,
IF(
ISPICKVAL(Policy__r.Commission_Policy_Type__c, &quot;Renewal&quot;),
&quot;Renewal&quot;,
&quot; &quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Policy Type</label>
    <type>Text</type>
</CustomField>