force-app/main/default/objects/Endorsement__c/fields/Commission_Sheet_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Commission_Sheet_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Sheet Uploaded</label>
    <type>Checkbox</type>
</CustomField>