force-app/main/default/objects/Endorsement__c/fields/Coverages_Count_Before__c.field-meta.xml
<CustomField>
    <fullName>Coverages_Count_Before__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Coverages Count Before</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>