force-app/main/default/objects/Endorsement__c/fields/Create_Inforce_Policies_Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Create_Inforce_Policies_Endorsements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create endt on all in-force policies</label>
    <type>Checkbox</type>
</CustomField>