force-app/main/default/objects/Endorsement__c/fields/CreatedDate_Date_Value__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_Date_Value__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedDate(Date Value)</label>
    <type>Date</type>
</CustomField>