force-app/main/default/objects/Endorsement__c/fields/Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Date__c</fullName>
    <description>Used by Accounting 

If Endorsement Billing = Agency or PFA, Payment Received = TRUE, Stages = Bind Order Sent, Delivered to Insured, Cancellation Processed/Tail in Place then update Credit Date field with Payment Received Date but if Payment Received Date is null then update Credit Date field with Endorsement Effective Date 

OR if Endorsement Billing = Direct,  Stages = Bind Order Sent, Delivered to Insured, Cancellation Processed/Tail in Place then update Credit Date field with Endorsement Effective Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Date</label>
    <type>Date</type>
</CustomField>