force-app/main/default/objects/Endorsement__c/fields/D_O_Share_of_Endorsement_Premium__c.field-meta.xml
<CustomField>
    <fullName>D_O_Share_of_Endorsement_Premium__c</fullName>
    <formula>ROUND(Premium_Change_Amount__c *(Policy__r.D_O_Rated_Premium__c/Policy__r.Premium__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D&amp;O Share of Endorsement Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>