force-app/main/default/objects/Endorsement__c/fields/Days_In_Processing__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Processing__c</fullName>
    <formula>IF(
NOT(OR(
ISPICKVAL(Stage__c, &quot;Delivered to Insured&quot;),
ISPICKVAL(Stage__c,&quot;Closed Lost&quot;))),
0,
IF((Endorsement_Processing_End_Date__c = DATEVALUE( CreatedDate )),1,(Endorsement_Processing_End_Date__c - DATEVALUE( CreatedDate ) + 1)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Processing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>