force-app/main/default/objects/Endorsement__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide a brief description of the reason the endorsement was required.</inlineHelpText>
    <label>Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>