force-app/main/default/objects/Endorsement__c/fields/Due_To_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Due_To_Insurer__c</fullName>
    <formula>IF( 
 Surplus_Lines_Policy__c = TRUE, 
(Total_Cost__c - FS_Fee__c - Commission__c - State_Stamping_Fee__c - State_Tax__c - State_Fees_Other__c - State_Filing_Fee__c) , 
(Total_Cost__c - FS_Fee__c - Commission__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due To Insurer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>