force-app/main/default/objects/Endorsement__c/fields/Eff_Date_Greater_Than_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Eff_Date_Greater_Than_Created_Date__c</fullName>
    <formula>IF(Endorsement_Effective_Date__c &gt; DATEVALUE(CreatedDate),TRUE,FALSE)</formula>
    <label>Eff Date Greater than Created Date</label>
    <type>Checkbox</type>
</CustomField>