force-app/main/default/objects/Endorsement__c/fields/Endorsement_Docs_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Docs_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endorsement Uploaded</label>
    <type>Checkbox</type>
</CustomField>