force-app/main/default/objects/Endorsement__c/fields/Endorsement_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Endorsement Effective Date</label>
    <type>Date</type>
</CustomField>