force-app/main/default/objects/Endorsement__c/fields/Endorsement_Filed_With_State__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Filed_With_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endorsement Filed With State</label>
    <type>Checkbox</type>
</CustomField>