force-app/main/default/objects/Endorsement__c/fields/Endorsement_Processing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Processing_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Endorsement Processing End Date</label>
    <type>Date</type>
</CustomField>