force-app/main/default/objects/Endorsement__c/fields/Endorsement_Quote_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Quote_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endorsement Quote Uploaded</label>
    <type>Checkbox</type>
</CustomField>