force-app/main/default/objects/Endorsement__c/fields/Endorsement_Stamped__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Stamped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not use</description>
    <label>Endorsement Stamped</label>
    <type>Checkbox</type>
</CustomField>