force-app/main/default/objects/Endorsement__c/fields/Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Endorsements__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endorsements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>