force-app/main/default/objects/Endorsement__c/fields/Endt_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Endt_Commission_Rate__c</fullName>
    <label>Endt Commission Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>