force-app/main/default/objects/Endorsement__c/fields/For_Tax_Doc_on_Policy__c.field-meta.xml
<CustomField>
    <fullName>For_Tax_Doc_on_Policy__c</fullName>
    <description>Jira SF -1035</description>
    <formula>Tail_Expiration_Date__c - Policy__r.Renewal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For Tax Doc on Policy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>