force-app/main/default/objects/Endorsement__c/fields/FS_Fee__c.field-meta.xml
<CustomField>
    <fullName>FS_Fee__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>FS Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>