force-app/main/default/objects/Endorsement__c/fields/In_force_Policy__c.field-meta.xml
<CustomField>
    <fullName>In_force_Policy__c</fullName>
    <formula>Policy__r.In_Force__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-force Policy</label>
    <type>Checkbox</type>
</CustomField>