force-app/main/default/objects/Endorsement__c/fields/Internal_Marketer__c.field-meta.xml
<CustomField>
    <fullName>Internal_Marketer__c</fullName>
    <formula>Policy__r.Internal_Marketer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Marketer</label>
    <type>Text</type>
</CustomField>