force-app/main/default/objects/Endorsement__c/fields/Is_New_Property__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New Property</label>
    <type>Checkbox</type>
</CustomField>