force-app/main/default/objects/Endorsement__c/fields/Is_Scale__c.field-meta.xml
<CustomField>
    <fullName>Is_Scale__c</fullName>
    <formula>RecordType.Name = &quot;Scale&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Scale</label>
    <type>Checkbox</type>
</CustomField>