force-app/main/default/objects/Endorsement__c/fields/Last_Stage_Change_Days__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Change_Days__c</fullName>
    <formula>TODAY()- Last_Stage_Change__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Stage Change Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>