force-app/main/default/objects/Endorsement__c/fields/Limit_Count_After__c.field-meta.xml
<CustomField>
    <fullName>Limit_Count_After__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Location Count After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>