force-app/main/default/objects/Endorsement__c/fields/Lives_Insured__c.field-meta.xml
<CustomField>
    <fullName>Lives_Insured__c</fullName>
    <description>H&amp;B</description>
    <label>Lives Insured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>