force-app/main/default/objects/Endorsement__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <description>name of the location (ex. &quot;The Alara Apartments&quot;) Used by ReShield</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>name of the location (ex. &quot;The Alara Apartments&quot;)</inlineHelpText>
    <label>Location Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>