force-app/main/default/objects/Endorsement__c/fields/Location_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Street_Address__c</fullName>
    <description>street address of property location - Used by ReShield</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>street address of property location</inlineHelpText>
    <label>Location Street Address</label>
    <type>TextArea</type>
</CustomField>