force-app/main/default/objects/Endorsement__c/fields/LPR_COMPANY__c.field-meta.xml
<CustomField>
    <fullName>LPR_COMPANY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LPR COMPANY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>