force-app/main/default/objects/Endorsement__c/fields/LPR_EFFECTIVE_DATE__c.field-meta.xml
<CustomField>
    <fullName>LPR_EFFECTIVE_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LPR EFFECTIVE DATE</label>
    <type>Date</type>
</CustomField>