force-app/main/default/objects/Endorsement__c/fields/LPR_POLICY_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>LPR_POLICY_NUMBER__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LPR POLICY NUMBER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>