force-app/main/default/objects/Endorsement__c/fields/LPR_TYPE__c.field-meta.xml
<CustomField>
    <fullName>LPR_TYPE__c</fullName>
    <label>LPR TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CANCELLATION REQUEST</fullName>
            </value>
            <value>
                <fullName>POLICY RELEASE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>