force-app/main/default/objects/Endorsement__c/fields/Marketer_UW__c.field-meta.xml
<CustomField>
    <fullName>Marketer_UW__c</fullName>
    <formula>Policy__r.Marketer_UW__c</formula>
    <label>Marketer/UW</label>
    <type>Text</type>
</CustomField>