force-app/main/default/objects/Endorsement__c/fields/Marketer_UW_Email__c.field-meta.xml
<CustomField>
    <fullName>Marketer_UW_Email__c</fullName>
    <formula>Policy__r.Marketer_UW_Email__c</formula>
    <label>Marketer/UW Email</label>
    <type>Text</type>
</CustomField>