force-app/main/default/objects/Endorsement__c/fields/Marketer_UW_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketer_UW_Name__c</fullName>
    <formula>Policy__r.Marketer_UW_Name__r.FirstName  + &quot; &quot; + Policy__r.Marketer_UW_Name__r.LastName</formula>
    <label>Marketer/UW Name</label>
    <type>Text</type>
</CustomField>