force-app/main/default/objects/Endorsement__c/fields/Method_Of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Method_Of_Cancellation__c</fullName>
    <label>Method Of Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLAT</fullName>
                <default>true</default>
                <label>FLAT</label>
            </value>
            <value>
                <fullName>PRO RATA</fullName>
            </value>
            <value>
                <fullName>SHORT RATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>