force-app/main/default/objects/Endorsement__c/fields/MGA_Commission__c.field-meta.xml
<CustomField>
    <fullName>MGA_Commission__c</fullName>
    <description>Used in Scale Invoices to QBO</description>
    <formula>Premium_Change_Amount__c * MGA_Commission_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MGA Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>