force-app/main/default/objects/Endorsement__c/fields/Named_Insured__c.field-meta.xml
<CustomField>
    <fullName>Named_Insured__c</fullName>
    <description>Additional Named insured other than Account Name (ReShield)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Named Insured</label>
    <length>200</length>
    <type>Text</type>
</CustomField>