force-app/main/default/objects/Endorsement__c/fields/Number_of_Deliveries_Ages_26__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deliveries_Ages_26__c</fullName>
    <label>Number of Deliveries (Ages 26+)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>