force-app/main/default/objects/Endorsement__c/fields/Other_1__c.field-meta.xml
<CustomField>
    <fullName>Other_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>