force-app/main/default/objects/Endorsement__c/fields/Other_2__c.field-meta.xml
<CustomField>
    <fullName>Other_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>